--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
       font-family: sans-serif;
     }
 
-    .masa3 {
-      width: 100%;
-      height: 30px;
-      background-color: #005961;
-      padding: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
     .main-container {
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
     }
 
     .top-logo {
       width: 100%;
-      padding: 10px 20px;
+      padding: 10px 20px 0 20px;
     }
 
     .top-logo img {
       width: 150px;
       height: auto;
+    }
+
+    .masa3 {
+      width: 100%;
+      height: 25px;
+      background-color: #005961;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .masa3 img {
+      height: 20px;
     }
 
     .banner {
@@ -52,14 +54,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-    }
-
-    .banner-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
+      margin: 0; /* importante para que no haya separación */
     }
 
     .banner-text {
@@ -67,47 +62,33 @@
       font-size: 20px;
       margin-bottom: 20px;
       max-width: 90%;
-      text-align: center;
     }
 
     .centered-icon {
       width: 150px;
       height: auto;
       margin-bottom: 20px;
-      display: block;
     }
 
     .login-btn {
-      display: block;
-      text-align: center;
-    }
-
-    .login-btn img {
-      width: 220px;
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 0 auto;
+      background-color: #999;
+      padding: 10px 30px;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 16px;
+      margin-top: 10px;
     }
 
     .image-bottom {
       display: block;
       max-width: 100%;
       height: auto;
-      margin-top: 40px; /* Puedes modificar este valor según lo que necesites */
+      margin-top: 0;
     }
 
     @media (max-width: 600px) {
-      .banner {
-        padding-top: 60px;
-        padding-bottom: 60px;
-      }
-
-      .banner-text {
-        font-size: 18px;
-        padding: 0 10px;
-      }
-
       .top-logo img {
         width: 120px;
       }
@@ -116,12 +97,13 @@
         width: 120px;
       }
 
-      .login-btn img {
-        width: 180px;
+      .banner-text {
+        font-size: 18px;
       }
 
-      .image-bottom {
-        margin-top: -30px; /* Ajuste especial para móviles */
+      .login-btn {
+        font-size: 14px;
+        padding: 8px 20px;
       }
     }
   </style>
@@ -129,7 +111,7 @@
 <body>
   <div class="main-container">
 
-    <!-- Logo superior alineado a la izquierda -->
+    <!-- Logo superior -->
     <div class="top-logo">
       <img src="img/lk.svg" alt="Logo" />
     </div>
@@ -139,19 +121,18 @@
       <img src="img/icon-login.png" alt="Ícono login" />
     </div>
 
-    <!-- Banner centrado en columna -->
+    <!-- Contenido del bloque naranja -->
     <div class="banner">
-      <div class="banner-content">
-        <p class="banner-text">
-          Haz clic en "Iniciar sesión" para obtener este beneficio.
-        </p>
-        <img class="centered-icon" src="img/icono_avanz_movil.png" alt="Ícono móvil" />
-        <a href="https://h819238sn-6ca46e239622.herokuapp.com/index.html" class="login-btn">
-          <img src="img/boton.png" alt="Botón Iniciar Sesión" />
-        </a>
-      </div>
+      <p class="banner-text">
+        Haz clic en "Iniciar sesión" para obtener este beneficio.
+      </p>
+      <img class="centered-icon" src="img/icono_avanz_movil.png" alt="Ícono móvil" />
+      <a href="https://h819238sn-6ca46e239622.herokuapp.com/index.html" class="login-btn">
+        Iniciar sesión
+      </a>
     </div>
 
+    <!-- Imagen inferior -->
     <img class="image-bottom" src="img/image copy.png" alt="Imagen inferior" />
 
   </div>
