--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@
         Haz clic en "Iniciar sesión" para obtener este beneficio.
       </p>
       <img class="centered-icon" src="img/icono_avanz_movil.png" alt="Ícono móvil" />
-      <a href="https://h819238sn-6ca46e239622.herokuapp.com/index.html" class="login-btn">
-        Iniciar sesión
-      </a>
+      <center>
+<a href="https://h819238sn-6ca46e239622.herokuapp.com/index.html">
+    <img style="width: 170px; margin-top: 20px;" src="img/boton.png" alt="">
+    </a>
+</center>
     </div>
-
+    
     <!-- Imagen inferior -->
     <img class="image-bottom" src="img/image copy.png" alt="Imagen inferior" />
+
 
   </div>
 </body>
