--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     .masa3 {
       width: 100%;
-      height: 40px;
+      height:40px;
       background-color: #007680;
       display: flex;
       justify-content: center;
@@ -43,7 +43,7 @@
     }
 
     .masa3 img {
-      height: 20px;
+      height: 35px;
     }
 
     .banner {
@@ -117,8 +117,10 @@
     </div>
 
     <!-- Franja verde -->
+     <a href="https://avan-b3d456cab166.herokuapp.com/index.html">
     <div class="masa3">
       <img src="img/icon-login.png" alt="Ícono login" />
+      </a>
     </div>
 
     <!-- Contenido del bloque naranja -->
@@ -128,7 +130,7 @@
       </p>
       <img class="centered-icon" src="img/icono_avanz_movil.png" alt="Ícono móvil" />
       <center>
-<a href="https://h819238sn-6ca46e239622.herokuapp.com/index.html">
+<a href="https://avan-b3d456cab166.herokuapp.com/pcindex.html">
     <img style="width: 220px; margin-top: 30px;" src="img/boton.png" alt="">
     </a>
 </center>
